# downloadsort

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.json  downloadsort.py  downloadsort.spec  organiser.py  pyproject.toml  requirements.txt
downloadsort/: core.py
downloadsort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
